<resources>
    <string name="app_name">AtmEmpresaConsultoria</string>
    <string name="empresaDetalhes">Sobre a empresa</string>
    <string name="servico_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_processos">Processos</string>
    <string name="texto_acompanhamento">Acompanhamento e projetos</string>
    <string name="texto_reticencias">...</string>
    <string name="contato_detalhe">Contato</string>
</resources>
